# fzfetch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml
.github/workflows/: docker-image.yml
docs/: backend.md  frontend-paths.md  ui-example.js
docs/superpowers/plans/: 2026-04-08-backend-logging.md  2026-04-08-dockerized-single-image-deploy.md  2026-04-08-frontend-backend-chain.md  2026-04-08-fzfetch-backend-core.md  2026-04-08-ghcr-image-publishing.md  2026-04-09-cache-file-metadata.md  2026-04-09-low-memory-index-runtime.md  2026-04-18-exclude-dirs.md  2026-04-19-frontend-i18n.md  2026-04-19-results-list-overflow.md  2026-04-29-backend-memory-reduction.md
docs/superpowers/specs/: 2026-04-08-backend-logging-design.md  2026-04-08-frontend-backend-chain-design.md  2026-04-08-fzfetch-backend-design.md  2026-04-08-ghcr-image-publishing-design.md  2026-04-18-exclude-dirs-design.md  2026-04-19-frontend-i18n-design.md  2026-04-19-page-title-i18n-design.md  2026-04-19-results-list-overflow-design.md  2026-04-22-mobile-header-compact-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  pathDisplay.test.ts  pathDisplay.ts  types.ts
frontend/src/components/: FuzzyHighlight.tsx  (+2 more)
src/: api.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  scanner.rs  search.rs  state.rs  web.rs  ws.rs
tests/: cache_scanner.rs  download_api.rs  http_app.rs  index_manager.rs  logging_helpers.rs
(+13 files in other folders)
